# rooster

./: .gitignore  README.md  package.json
.github/actions/build-program/: action.yml
.github/actions/install-linux-build-deps/: action.yml
.github/actions/yarn-install-and-build/: action.yml
.github/workflows/: program-test.yml
program/: Cargo.toml
program/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs
program/tests/: integration.rs
