[package]
name = "rooster"
version = "0.1.0"
edition = "2021"
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Rooster: a simple program to test authorization rules for pNFTs."
license-file = "../LICENSE"
keywords = ["nft", "metaplex", "solana", "blockchain"]
repository = "https://github.com/metaplex-foundation/rooster"
readme = "../README.md"

[dependencies]
borsh = "0.9.3"
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
mpl-utils = "0.0.5"
num-derive = "0.3.3"
num-traits = "~0.2"
shank = "0.0.10"
solana-program = "1.14"
thiserror = "~1.0"


[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.14"
solana-sdk = "1.14"
solana-logger = "1.14"

[lib]
crate-type = ["cdylib", "lib"]
name = "rooster"

